--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<html id="viewport">
+<html>
     <head>
         <title>Colours</title>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
