--- a/www/index.html
+++ b/www/index.html
@@ -555,10 +555,10 @@
                             slidePageFrom(page2, 'right');
                             console.log(ev);
                            });
-            /*hammertime1.on("swiperight", function(ev) {
-                            slidePageFrom2(page3, 'left');
+            hammertime1.on("swiperight", function(ev) {
+                            slidePageFrom2(page8, 'right');
                             console.log(ev);
-                           });*/
+                           });
             hammertime2.on("swipeleft", function(ev) {
                             slidePageFrom(page3, 'right');
                             console.log(ev);
@@ -567,10 +567,6 @@
                             slidePageFrom(homePage, 'left');
                             console.log(ev);
                            });
-            /*hammertime3.on("swipeleft", function(ev) {
-                           slidePageFrom2(homePage, 'right');
-                            console.log(ev);
-                           });*/
             hammertime3.on("swipeleft", function(ev) {
                            slidePageFrom(page4, 'right');
                            console.log(ev);
@@ -611,10 +607,10 @@
                             slidePageFrom(page6, 'left');
                             console.log(ev);
                            });
-            /*hammertime8.on("swipeleft", function(ev) {
-                            slidePageFrom(page5, 'right');
+            hammertime8.on("swipeleft", function(ev) {
+                            slidePageFrom(homePage, 'left');
                             console.log(ev);
-                           });*/
+                           });
             hammertime8.on("swiperight", function(ev) {
                             slidePageFrom(page7, 'left');
                             console.log(ev);
